Minor fixes and updated translations.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -10,6 +10,7 @@
     "bodyContainer": "Body Container",
     "confirm-email": "Confirm your email",
     "content": "Content",
+    "cookies-page": "Cookies policy",
     "copyright-text": "Copyright text",
     "css": "CSS",
     "custom-controller": "Custom controller",
@@ -48,6 +49,7 @@
     "permalink": "Permalink",
     "please-click-on-confirm-email": "Please clic on this link to activate your account.",
     "preview": "Preview",
+    "privacy-page": "Privacy policy",
     "query": "Query",
     "read-more": "Read more",
     "recover-your-account": "Recover access to your account",
