--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -10,6 +10,7 @@
     "bodyContainer": "Body Container",
     "confirm-email": "Confirme su email",
     "content": "Contenido",
+    "cookies-page": "Política de cookies",
     "copyright-text": "Texto de Copyright",
     "css": "CSS",
     "custom-controller": "Controlador personalizado",
@@ -48,6 +49,7 @@
     "permalink": "Enlace",
     "please-click-on-confirm-email": "Por favor, haga clic en el siguiente enlace para finalizar la activación de su cuenta.",
     "preview": "Previsualizar",
+    "privacy-page": "Política de privacidad",
     "query": "Consulta",
     "read-more": "Leer más",
     "recover-email-send-ok": "Le hemos enviado un email para que pueda cambiar la contraseña.",
