--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -77,5 +77,5 @@
     "webportal": "WebPortal",
     "webportal-forgotten-password": "He olvidado la contraseña",
     "you-must-accept-privacy-policy": "Debe aceptar la política de privacidad",
-    "you-must-accept-privacy-policy": "You must accept the terms and conditions"
+    "you-must-accept-terms": "Debe aceptar los términos y condiciones"
 }
