Improved log messages.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -17,8 +17,8 @@
     "delete-account": "Delete account",
     "delete-account-p": "If you are completely sure you want to delete your account, type the word DELETE and press the button.",
     "do-not-have-account": "Do not have an account? Create an account",
-    "email-contact-already-used": "Email contact already used, you can sign-in directly",
-    "email-not-registered": "Email not registered",
+    "email-contact-already-used": "The email %email% is already registered. You can log in with him.",
+    "email-not-registered": "Email %email% not registered.",
     "employees": "Employees",
     "equivalent-page-desc": "A page is equivalent when have the same identifier",
     "facebook-login": "Facebook login",
