--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -17,8 +17,8 @@
     "delete-account": "Eliminar cuenta",
     "delete-account-p": "Si está completamente seguro de que desea eliminar su cuenta, escriba la palabra DELETE y pulse el botón.",
     "do-not-have-account": "¿No tiene cuenta? Cree una cuenta.",
-    "email-contact-already-used": "Email de contacto ya esta en uso, puedes iniciar sesión directamente",
-    "email-not-registered": "Email no registrado",
+    "email-contact-already-used": "El email %email% ya está registrado. Puedes iniciar sesión con él.",
+    "email-not-registered": "Email %email% no registrado.",
     "employees": "Empleados",
     "equivalent-page-desc": "Una página es equivalente cuando tiene el mismo identificador",
     "facebook-login": "Acceder con Facebook",
