Improved registration and verification of contacts.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -18,7 +18,8 @@
     "delete-account-p": "If you are completely sure you want to delete your account, type the word DELETE and press the button.",
     "do-not-have-account": "Do not have an account? Create an account",
     "email-contact-already-used": "The email %email% is already registered. You can log in with him.",
-    "email-not-registered": "Email %email% not registered.",
+    "email-disabled": "The email %email% is disabled.",
+    "email-not-registered": "The email %email% is not registered.",
     "employees": "Employees",
     "equivalent-page-desc": "A page is equivalent when have the same identifier",
     "facebook-login": "Facebook login",
@@ -46,18 +47,17 @@
     "no-index": "No index",
     "ordernum": "Order num.",
     "page-not-found": "Page not found",
-    "page-not-found-paragraph": "We could not find the page you are looking for Use the search engine.",
+    "page-not-found-paragraph": "We could not find the page you are looking for. Please, use the search engine.",
     "permalink": "Permalink",
-    "please-click-on-confirm-email": "Please clic on this link to activate your account.",
+    "please-click-on-confirm-email": "Please click on this link to activate your account.",
     "preview": "Preview",
     "privacy-page": "Privacy policy",
     "query": "Query",
     "read-more": "Read more",
     "recover-your-account": "Recover access to your account",
-    "recover-your-account-access": "Recover access to your account, click <a href='%link%'>here</a> to receive a mail with a link",
     "recover-your-account-body": "Click on <a href='%link%'>this link</a> to recover access to your account, when you are logged in change your password.",
     "recovered-access-go-to-account": "Recovered access to your account, go to <a href='%link%'>your account</a> and update your password.",
-    "recovery-timed-out": "Recovery timed out or yet do it. If it wasn't you, <a href='%link%'>reset your password</a>.",
+    "recovery-timed-out": "Recovery timed out or yet do it.",
     "register-me": "Create account",
     "register-new-contact": "Create an account",
     "repeat-password": "Repeat password",
