--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -17,8 +17,9 @@
     "delete-account": "Eliminar cuenta",
     "delete-account-p": "Si está completamente seguro de que desea eliminar su cuenta, escriba la palabra DELETE y pulse el botón.",
     "do-not-have-account": "¿No tiene cuenta? Cree una cuenta.",
-    "email-contact-already-used": "El email %email% ya está registrado. Puedes iniciar sesión con él.",
-    "email-not-registered": "Email %email% no registrado.",
+    "email-contact-already-used": "El email %email% ya está registrado. Puede iniciar sesión con él.",
+    "email-disabled": "El email %email% está deshabilitado.",
+    "email-not-registered": "El email %email% no está registrado.",
     "employees": "Empleados",
     "equivalent-page-desc": "Una página es equivalente cuando tiene el mismo identificador",
     "facebook-login": "Acceder con Facebook",
@@ -34,7 +35,7 @@
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript con cookies",
     "last-update": "Última actualización",
-    "login-contact-not-found": "El contacto del login no encontrado",
+    "login-contact-not-found": "Contacto del login no encontrado",
     "login-to-continue": "Identifíquese para continuar",
     "login-to-continue-paragraph": "Necesita identificarse para continuar con esta acción",
     "login-with-social-or-email": "Si lo prefiere, puede identificarse mediante sus redes sociales.",
@@ -46,7 +47,7 @@
     "no-index": "No indexar",
     "ordernum": "Núm. orden",
     "page-not-found": "Página no encontrada",
-    "page-not-found-paragraph": "No hemos encontrado la página que busca. Use el buscador.",
+    "page-not-found-paragraph": "No hemos encontrado la página que busca. Por favor, use el buscador.",
     "permalink": "Enlace",
     "please-click-on-confirm-email": "Por favor, haga clic en el siguiente enlace para finalizar la activación de su cuenta.",
     "preview": "Previsualizar",
@@ -55,10 +56,9 @@
     "read-more": "Leer más",
     "recover-email-send-ok": "Le hemos enviado un email para que pueda cambiar la contraseña.",
     "recover-your-account": "Recuperación de acceso a su cuenta",
-    "recover-your-account-access": "¿Ha olvidado la contraseña? Pulse <a href='%link%'>aquí</a> para continuar.",
-    "recover-your-account-body": "Pulsa en <a href='%link%'>este enlace</a> para recuperar el acceso a tu cuenta, cuando estés identificado cambia tu contraseña.",
-    "recovered-access-go-to-account": "Has recuperado el acceso a tu cuenta, ve a <a href='%link%'>tu perfil</a> y actualiza la contraseña.",
-    "recovery-timed-out": "Recuperación caducada o ya realizada. Si no has sido tu, <a href='%link%'>reestablece tu contraseña</a>.",
+    "recover-your-account-body": "Pulse en <a href='%link%'>este enlace</a> para recuperar el acceso a su cuenta, cuando esté identificado cambie su contraseña.",
+    "recovered-access-go-to-account": "Ha recuperado el acceso a su cuenta, vaya a <a href='%link%'>su perfil</a> y actualice la contraseña.",
+    "recovery-timed-out": "Recuperación caducada o ya realizada.",
     "register-me": "Crear cuenta",
     "register-new-contact": "Crear una cuenta",
     "repeat-password": "Repetir contraseña",
