- Improved account creation, activation and recovery. - Added support for opened email verification.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -55,8 +55,7 @@
     "query": "Query",
     "read-more": "Read more",
     "recover-your-account": "Recover access to your account",
-    "recover-your-account-body": "Click on <a href='%link%'>this link</a> to recover access to your account, when you are logged in change your password.",
-    "recovered-access-go-to-account": "Recovered access to your account, go to <a href='%link%'>your account</a> and update your password.",
+    "recover-your-account-body": "Press the button to regain access to your account. When you are identified, please change your password.",
     "recovery-timed-out": "Recovery timed out or yet do it.",
     "register-me": "Create account",
     "register-new-contact": "Create an account",
